--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang=en>
 <head>
   <meta charset="utf-8">
-  <title>My first webpage</title>
+  <title>My first website</title>
 </head>
 <body>
   <h1>My first website</h1>
