--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang=en>
 <head>
   <meta charset="utf-8">
-  <title>My first webpage</title>
+  <link href="./style.css" rel="stylesheet" type="text/css"> <!-- ./ betyder leta i den här mappen-->
+  <title>My first website</title>
 </head>
-<body>
+<body class="gradient">
   <h1>My first website</h1>
-  <div>
-    <div>
+  <div class="inputSection">
+    <div class="inputs">
       <input placeholder="Something"> </input>
     </div>
-    <button>Add</button>
-    <button>Go!</button>
+    <button class="addOption">Add</button>
   </div>
+  <button>Go!</button>
 </body>
 </html>
