--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html lang=en>
 <head>
   <meta charset="utf-8">
-<<<<<<< HEAD
+<head>
   <link href="./style.css" rel="stylesheet" type="text/css"> <!-- ./ betyder leta i den här mappen-->
-=======
->>>>>>> e9376736245bad7d5718b70a68c13854b4cf1b47
   <title>My first website</title>
 </head>
 <body class="gradient">
